--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,46 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <div class="background">
+        <div style="translate: -25% -25%;" class="background_blur"></div>
+        <div style="translate: 0% 0%;" class="background_blur"></div>
+        <div style="translate: 100% 100%;" class="background_blur"></div>
+        <div style="translate: 200% 0%;" class="background_blur"></div>
+        <div style="translate: 250% 50%;" class="background_blur"></div>
+        <div style="translate: 250% 100%;" class="background_blur"></div>
+        <div style="translate: 0% 50%;" class="background_blur"></div>
+        <div style="translate: 50% 100%;" class="background_blur"></div>
+    </div>
+    <main>
+        <section class="menu-bar">
+            <div class="menu-bar_group">
+                <div class="group_title">
+                    <h2 class="text-shadow">Projects</h2>
+                    <button class="text-shadow">+</button>
+                </div>
+                <div class="group-container">
+                    <button>My Project</button>
+                    <button>My Project</button>
+                    <button>My Project</button>
+                    <button>My Project</button>
+                    <button>My Project</button>
+                </div>
+            </div>
+            <div class="menu-bar_group">
+                <div class="group_title">
+                    <h2 class="text-shadow">Notes</h2>
+                    <button class="text-shadow">+</button>
+                </div>
+            </div>
+            <div class="menu-bar_group">
+                <div class="group_title">
+                    <h2 class="text-shadow">Check List</h2>
+                    <button class="text-shadow">+</button>
+                </div>
+            </div>
+        </section>
+        <section class="todo-container"></section>
+    </main>
 
 </body>
 
